@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -52,7 +51,7 @@ public class EmpresaServiceImpl implements EmpresaService {
         return empresaRepository.findAll()
                 .stream()
                 .map(empresa -> modelMapper.map(empresa, EmpresaDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
